fix header layout shift, and likedSongs store

--- a/app/globals.css
+++ b/app/globals.css
@@ -32,8 +32,10 @@ body {
 }
 
 .loader {
-  width: 50px;
-  height: 50px;
+  width: 100%;
+  max-width: 50px;
+  height: 100%;
+  max-height: 50px;
   padding: 8px;
   border-radius: 50%;
   background: #34d399;
